--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Britlex</title>
   </head>
   <body>
-    <header class="header section">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
-          <a href="#" class="logo">Brit<span class="logo-accent">lex</span></a>
+          <a class="logo" href="#">Brit<span class="logo-accent">lex</span> </a>
           <ul class="header-links">
             <li class="header-link">
               <a class="header-link-item" href="#">Home</a>
             </li>
             <li class="header-link">
-              <a class="header-link-item" href="">Skills</a>
+              <a class="header-link-item" href="#skills">Skills</a>
             </li>
             <li class="header-link">
-              <a class="header-link-item" href="">About Us</a>
+              <a class="header-link-item" href="#about">About Us</a>
             </li>
             <li class="header-link">
               <a class="header-link-item" href="">Pricing</a>
@@ -43,43 +43,40 @@
     </header>
     <main>
       <!-- Hero section -->
-      <section class="hero section">
-        <div class="container">
-          <div class="container-hero">
-            <div class="hero-leftside">
-              <h1 class="hero-title">
-                Learn<br />
-                Any Foreign Language
-              </h1>
-              <p class="hero-subtitle">
-                With our teachers who write a program for each student, you will be able to make
-                your first sketch after the first lesson.
-              </p>
-              <button class="hero-btn" type="button">Get started</button>
-            </div>
-            <div class="hero-rightside">
-              <img src="./img/learning-languages.svg" alt="hero-img" />
-            </div>
+      <section class="section hero">
+        <div class="container container-hero">
+          <div class="hero-leftside">
+            <h1 class="hero-title">Learn Any&nbsp;Foreign Language</h1>
+            <p class="hero-subtitle">
+              With our teachers who write a program for each student, you will be able to make your
+              first sketch after the first lesson.
+            </p>
+            <button class="hero-btn" type="button">Get started</button>
+          </div>
+          <div class="hero-rightside">
+            <img src="./img/learning-languages.svg" alt="hero-img" />
           </div>
         </div>
       </section>
       <!-- Skills section -->
-      <section class="skills-section">
+      <section class="section skills-section" id="skills">
         <div class="container">
-          <h2 class="skills-section-title">Skills</h2>
+          <h2 class="section-title skills-section-title">Skills</h2>
           <ul class="skills-cards-wrap">
             <li class="skills-card first-card">
               <img src="./img/skills/speaking.svg" alt="1" class="skills-img" />
-              <h3 class="skills-subtitle">Speaking</h3>
-              <p class="skills-text">
-                Improve your English skills and confidence. Live classes and interactive lessons
-                online. 20% extra free for a limited time only.
-              </p>
-              <p class="skills-text paragraph">
-                Learn English online and improve your skills through our high-quality courses and
-                resources – all designed for adult language learners. only.
-              </p>
-              <button class="skills-btn">Learn more</button>
+              <div class="skills-card-group">
+                <h3 class="skills-subtitle">Speaking</h3>
+                <p class="skills-text">
+                  Improve your English skills and confidence. Live classes and interactive lessons
+                  online. 20% extra free for a limited time only.
+                </p>
+                <p class="skills-text paragraph">
+                  Learn English online and improve your skills through our high-quality courses and
+                  resources – all designed for adult language learners. only.
+                </p>
+                <button class="skills-btn">Learn more</button>
+              </div>
             </li>
             <li class="skills-card second-card">
               <img src="./img/skills/writing.svg" alt="2" class="skills-img" />
@@ -111,82 +108,110 @@
               </div>
             </li>
           </ul>
+
+          <!-- Using flex
+            <div class="wrapper" flex>
+            <article class="speaking"></article>
+
+            <div class="inner-wrapper" flex flex-direction=column>
+              <div class="group" flex>
+                <article class="writing"></article>
+                <article class="reading"></article>
+              </div>
+
+              <article class="listening" flex-grow=1></article>
+            </div>
+          </div>
+        </div> -->
+
+          <!-- https://www.youtube.com/playlist?list=PLiZoB8JBsdzk7yebGLJSgZiGXty6YDPBD -->
+          <!-- <div class="grid" >
+          <article></article>
+          <article></article>
+          <article></article>
+          <article></article>
+        </div> -->
         </div>
       </section>
 
-      <!-- SAbout Us section -->
-      <section class="about-us-section">
-        <div class="container">
-          <div class="about-us-wrap">
-            <div class="about-us-rightside">
-              <h2 class="about-us-title">About Us</h2>
-              <p class="about-us-text">
-                The model offers a framework for discussing problems related to the user's
-                experience, as well as possible ways and means of solving them. Application
-                development begins at the top level (strategy), where the future software product is
-                described quite abstractly from the point of view of the expectations of both users
-                and the customer.
-              </p>
-              <ul class="advantages">
-                <li class="quantity">
-                  <p class="things">800</p>
-                  <p class="things-2">Pupils</p>
-                </li>
-                <li class="quantity">
-                  <p class="things">18</p>
-                  <p class="things-2">Teachers</p>
-                </li>
-                <li class="quantity">
-                  <p class="things">6</p>
-                  <p class="things-2">
-                    Foreign<br />
-                    languages
-                  </p>
-                </li>
-              </ul>
-            </div>
-            <div class="about-us-leftside">
-              <img src="./img/about-us/about-us.svg" alt="" />
-            </div>
+      <!-- About Us section -->
+      <section class="section about-us-section" id="about">
+        <div class="container about-us-container">
+          <div class="about-us-leftside">
+            <h2 class="section-title about-us-title">About Us</h2>
+
+            <p>
+              The model offers a framework for discussing problems related to the user's experience,
+              as well as possible ways and means of solving them. Application development begins at
+              the top level (strategy), where the future software product is described quite
+              abstractly from the point of view of the expectations of both users and the customer.
+            </p>
+
+            <ul class="advantages">
+              <li class="advantages-item">
+                <p class="quantity">800</p>
+                <p class="things">Pupils</p>
+              </li>
+              <li class="advantages-item">
+                <p class="quantity">18</p>
+                <p class="things">Teachers</p>
+              </li>
+              <li class="advantages-item">
+                <p class="quantity">6</p>
+                <p class="things">Foreign languages</p>
+              </li>
+            </ul>
+          </div>
+          <div class="about-us-rightside">
+            <img src="./img/about-us/about-us.svg" alt="" />
           </div>
         </div>
       </section>
 
       <!-- Pricing Section -->
-      <section class="pricing-section">
+      <section class="section pricing-section">
         <div class="container">
-          <h2 class="pricing-section-title">Pricing</h2>
+          <h2 class="section-title pricing-section-title">Pricing</h2>
           <ul class="pricing-list">
             <li class="pricing-list-item">
-              <img src="./img/pricing/online.svg" alt="1" class="list-item-img" />
-              <h3 class="list-item-subtitle">Self-study online course</h3>
-              <p class="list-item-text">
-                Start learning English online in live classes with qualified EC teachers and
-                students from all over the world.
+              <img class="list-item-img" src="./img/pricing/online.svg" alt="1" />
+              <div class="pricing-text-group">
+                <h3 class="list-item-subtitle">Self-study online course</h3>
+                <p class="list-item-text">
+                  Start learning English online in live classes with qualified EC teachers and
+                  students from all over the world.
+                </p>
+              </div>
+              <p class="pricing-meta">
+                <span class="pricing-meta-cost">&#163;5.99</span>
+                <span class="pricing-meta-period">per month</span>
               </p>
-              <button class="item-btn" type="button">
-                £5.99&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp&nbsp;<span class="btn-text">per month</span>
-              </button>
             </li>
             <li class="pricing-list-item">
-              <img src="./img/pricing/lesson.svg" alt="2" class="list-item-img" />
-              <h3 class="list-item-subtitle">Live online classes</h3>
-              <p class="list-item-text text-2">
-                Interactive group classes with expert teachers. Free 7-day trial
+              <img class="list-item-img" src="./img/pricing/lesson.svg" alt="2" />
+              <div class="pricing-text-group">
+                <h3 class="list-item-subtitle">Live online classes</h3>
+                <p class="list-item-text">
+                  Interactive group classes with expert teachers. Free 7-day trial
+                </p>
+              </div>
+              <p class="pricing-meta">
+                <span class="pricing-meta-cost">&#163;12.99</span>
+                <span class="pricing-meta-period">per month</span>
               </p>
-              <button class="item-btn" type="button">
-                £5.99&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp&nbsp;<span class="btn-text">per month</span>
-              </button>
             </li>
             <li class="pricing-list-item">
-              <img src="./img/pricing/webinar.svg" alt="3" class="list-item-img" />
-              <h3 class="list-item-subtitle">Personal Tuition</h3>
-              <p class="list-item-text text-3">
-                Online one-to-one English tutoring – enjoy our first session for only $1
+              <img class="list-item-img" src="./img/pricing/webinar.svg" alt="3" />
+              <div class="pricing-text-group">
+                <h3 class="list-item-subtitle">Personal Tuition</h3>
+                <p class="list-item-text">
+                  Online one-to-one English tutoring – enjoy our first session for only $1
+                </p>
+              </div>
+              <p class="pricing-meta">
+                <span class="pricing-meta-cost">&#163;12.99</span>
+                <span class="pricing-meta-period">per month</span>
               </p>
-              <button class="item-btn" type="button">
-                £5.99&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp&nbsp;<span class="btn-text">per month</span>
-              </button>
             </li>
           </ul>
           <!-- <ul class="pricing-btn-list">
@@ -211,41 +236,43 @@
       </section>
 
       <!-- Contact US -->
-      <section class="contact-us-section">
-        <div class="container">
-          <div class="contact-us-wrapper">
-            <img class="contact-us-img" src="./img/contact-us/contact.svg" alt="1" />
-            <div class="contact-us-leftside">
-              <h2 class="contact-us-title">Contact Us</h2>
-              <p class="contact-us-text">
-                Discover your current English level by taking our free online English test. Sign up
-                to our newsletter for learning tips and free resources
-              </p>
-              <form class="form" autocomplete="on" method="GET" target="">
-                <input class="input" name="name" type="text" value="" />
-                <button class="submit-btn" type="submit" value="Submit">Subscribe</button>
-              </form>
-            </div>
+      <section class="section contact-us-section">
+        <div class="container contact-us-container">
+          <img class="contact-us-img" src="./img/contact-us/contact.svg" alt="1" />
+          <div class="contact-us-rightside">
+            <h2 class="section-title contact-us-title">Contact Us</h2>
+            <p class="contact-us-text">
+              Discover your current English level by taking our free online English test. Sign up to
+              our newsletter for learning tips and free resources
+            </p>
+            <form class="form" autocomplete="on" method="GET" target="">
+              <input
+                class="input"
+                name="name"
+                type="text"
+                value=""
+                placeholder="Enter Your E-mail"
+              />
+              <button class="submit-btn" type="submit" value="Submit">Subscribe</button>
+            </form>
           </div>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="footer-wrap">
-          <a href="" class="logo footer-logo">Brit<span class="logo-accent">lex</span></a>
-          <ul class="footer-nav">
-            <li class="footer-nav-item">
-              <a class="footer-item-link" href="">Terms and Conditions</a>
-            </li>
-            <li class="footer-nav-item">
-              <a class="footer-item-link" href="">Privacy Policy</a>
-            </li>
-            <li class="footer-nav-item">
-              <a class="footer-item-link" href="">Cookie Policy</a>
-            </li>
-          </ul>
-        </div>
+      <div class="container footer-container">
+        <a class="logo footer-logo" href="">Brit<span class="logo-accent">lex</span></a>
+        <ul class="footer-nav">
+          <li class="footer-nav-item">
+            <a class="footer-item-link" href="">Terms and Conditions</a>
+          </li>
+          <li class="footer-nav-item">
+            <a class="footer-item-link" href="">Privacy Policy</a>
+          </li>
+          <li class="footer-nav-item">
+            <a class="footer-item-link" href="">Cookie Policy</a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
