--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <li class="pricing-list-item">
               <img class="list-item-img" src="./img/pricing/online.svg" alt="1" />
               <div class="pricing-text-group">
-                <h3 class="list-item-subtitle">Self-study online course</h3>
+                <h3 class="list-item-subtitle">Self-study online</h3>
                 <p class="list-item-text">
                   Start learning English online in live classes with qualified EC teachers and
                   students from all over the world.
